--- a/Handwritten_digits_Object_Localization.ipynb
+++ b/Handwritten_digits_Object_Localization.ipynb
@@ -12,7 +12,7 @@
     "- classify the main subject in an image\n",
     "- localize it by drawing bounding boxes around it.\n",
     "\n",
-    "I'll use the [MNIST](http://yann.lecun.com/exdb/mnist/) dataset to synthesize a custom dataset for the task:\n",
+    "I'll use the [handwritten digits dataset](http://yann.lecun.com/exdb/mnist/) dataset to synthesize a custom dataset for the task:\n",
     "- Place each \"digit\" image on a black canvas of width 75 x 75 at random locations.\n",
     "- Calculate the corresponding bounding boxes for those \"digits\".\n",
     "\n",
